--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,7 @@ image {
 }
 .container {
   max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 .section {
@@ -69,6 +68,9 @@ image {
   flex-direction: row;
   gap: 40px;
   margin-right: 332px;
+}
+.link {
+  padding: 24px 0;
 }
 .container-address {
   display: flex;
@@ -177,6 +179,7 @@ image {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .sect-two-list-text {
   font-weight: 400;
