--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,11 @@ image {
 .container-link-address {
   display: flex;
   flex-direction: row;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 .nav-links {
   display: flex;
   align-items: center;
+  padding: 24px 0;
 }
 .logo {
   display: flex;
@@ -75,6 +74,7 @@ image {
 .container-address {
   display: flex;
   gap: 40px;
+  padding: 24px 0;
 }
 .nav-links-logo-studio {
   color: #2e2f42;
