--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ image {
 /* main */
 /* sect 1 */
 .main-section-one {
-  background: #2e2f42;
+  background-color: #2e2f42;
   padding: 188px 0;
 }
 .section-one-title {
@@ -206,7 +206,7 @@ image {
   margin-bottom: 72px;
 }
 .sect-our-team {
-  background: #f4f4fd;
+  background-color: #f4f4fd;
 }
 .our-team-title-text {
   padding: 32px 0;
@@ -220,7 +220,7 @@ image {
   border-radius: 0 0 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background: #fff;
+  background-color: #fff;
 }
 .our-team-title {
   font-weight: 500;
